# tree

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: color.hpp  help.hpp  node.hpp  options.hpp  serializer.hpp  sort.hpp
include/color/: color.hpp  extension_types.hpp
include/serializers/: json.hpp  standard.hpp
src/: color.cpp  help.cpp  main.cpp  node.cpp  options.cpp  sort.cpp
src/color/: color.cpp  extension_types.cpp
src/output/: json.cpp  standard.cpp
